--- a/index.html
+++ b/index.html
@@ -73,10 +73,9 @@
 
 
     <footer>
-       <div class="footerx">
-<img src="./imagenes/insta.gif" width="100%" height="400px"  alt="instagram">
-
-       </div>
+        <div class="instag">
+        <img src="../imagenes/insta.jpg" alt="instagram"></div>
+        
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
