--- a/index.html
+++ b/index.html
@@ -67,20 +67,16 @@
     </main>
 
 
-
-
-
-
-
  
     <footer>
-        
+        <p>No me tomo ningun estilo en el footer</p>
       </footer>
+
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
         crossorigin="anonymous"></script>
-
 </body>
 
 </html>
