--- a/index.html
+++ b/index.html
@@ -69,7 +69,15 @@
 
  
     <footer>
-        <p>No me tomo ningun estilo en el footer</p>
+        <div class="instagram">
+            <p>Red social</p>
+            <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="../imagenes/instagram.png"
+                width="50px" alt="instagram"></a>
+          </div>
+      
+          <div class="copy">
+            &copy 2023
+          </div>
       </footer>
 
 
