--- a/index.html
+++ b/index.html
@@ -2,23 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./scss/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <title>lasdoratis</title>
-    <link rel="shortcut icon" href="./imagenes/iframe.jpg">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./scss/main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <title>lasdoratis</title>
+  <link rel="shortcut icon" href="./imagenes/iframe.jpg">
 </head>
 
 <body>
 
-    <main>
-    <nav><nav class="navbar navbar-expand-lg navbar-light">
+  <main>
+    <nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="./index.html">Las Doratis</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
@@ -30,7 +32,7 @@
                 <a class="nav-link" href="./secciones/opiniones.html">Opiniones</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="./secciones/compra.html">Comprar</a>
+                <a class="nav-link" href="./secciones/nosotros.html">Sobre Nosotros</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="./secciones/contacto.html">Contacto</a>
@@ -38,53 +40,43 @@
             </ul>
           </div>
         </div>
-      </nav></nav>
+      </nav>
+    </nav>
 
+  
 
-        <div id="carouselExampleFade" class="carousel slide carousel-fade">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="./imagenes/historia.jpg" class="d-block w-100" alt="Historia">
-              </div>
-              <div class="carousel-item">
-                <img src="./imagenes/diseño.jpg" class="d-block w-100" alt="Diseño">
-              </div>
-              <div class="carousel-item">
-                <img src="./imagenes/tejedoras.jpg" class="d-block w-100" alt="Tejedoras">
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
+    <div class="card" style="width: 18rem;">
+      <img src="./imagenes/vestido.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+          content.</p>
+          <img src="./imagenes/vestido2.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+      </div>
+      </div>
 
-    </main>
-
-
- 
-    <footer>
-        <div class="instagram">
-            <p>Red social</p>
-            <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="./imagenes/instagram.png"
-                width="50px" alt="instagram"></a>
-          </div>
       
-          <div class="copy">
-            &copy 2023
-          </div>
-          
-      </footer>
+  </main>
+
+    <footer>
+      <div class="instagram">
+        <p>Red social</p>
+        <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="./imagenes/instagram.png"
+            width="50px" alt="instagram"></a>
+      </div>
+
+      <div class="copy">
+        &copy 2023
+      </div>
+
+    </footer>
 
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
-        crossorigin="anonymous"></script>
+      integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+      crossorigin="anonymous"></script>
 </body>
 
 </html>
