--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -31,7 +31,7 @@
               <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="../secciones/compra.html">Comprar</a>
+              <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
