--- a/index.html
+++ b/index.html
@@ -43,32 +43,29 @@
       </nav>
     </nav>
 
+<header>
+
+<div class="div-img">
+  <img src="./imagenes/Doratis.jpg" width="100%" alt="doratis tejidos">
+</div>
+
+</header>
+
+
   
-
-    <div class="card" style="width: 18rem;">
-      <img src="./imagenes/vestido.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-          content.</p>
-          <img src="./imagenes/vestido2.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-      </div>
-      </div>
-
-      
   </main>
 
     <footer>
       <div class="instagram">
         <p>Red social</p>
-        <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="./imagenes/instagram.png"
+        <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="../imagenes/instagram.png"
             width="50px" alt="instagram"></a>
       </div>
-
+  
       <div class="copy">
         &copy 2023
       </div>
+      
 
     </footer>
 
