--- a/index.html
+++ b/index.html
@@ -43,29 +43,27 @@
       </nav>
     </nav>
 
-<header>
+    <header>
 
-<div class="div-img">
-  <img src="./imagenes/Doratis.jpg" width="100%" alt="doratis tejidos">
-</div>
+      <div class="div-img">
+        <img src="./imagenes/Doratis.jpg" width="100%" alt="doratis tejidos">
+      </div>
 
-</header>
+    </header>
 
+    <main>
 
-  
-  </main>
+    </main>
 
     <footer>
-      <div class="instagram">
-        <p>Red social</p>
-        <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="../imagenes/instagram.png"
-            width="50px" alt="instagram"></a>
+      <div class="linea">
+        <p>Un concepto unico para tus prendas</p>
+
       </div>
-  
-      <div class="copy">
-        &copy 2023
+
+      <div class="logo1">
+        <img src="./imagenes/iframe.jpg" alt=" logo">
       </div>
-      
 
     </footer>
 
