--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -14,34 +14,34 @@
 
 <body>
 
-<main>
-  <nav>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Las Doratis</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
-            </li>
-          </ul>
+  <main>
+    <nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Las Doratis</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </nav>
     </nav>
-  </nav>
 
 
 
@@ -64,23 +64,19 @@
         instagram.</p>
     </div>
 
-
-
-
   </main>
 
 
 
 
   <footer>
-    <div class="instagram">
-      <p>Red social</p>
-      <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="../imagenes/instagram.png"
-          width="50px" alt="instagram"></a>
+    <div class="linea">
+      <p>Un concepto unico para tus prendas</p>
+
     </div>
 
-    <div class="copy">
-      &copy 2023
+    <div class="logo1">
+      <img src="../imagenes/iframe.jpg" alt=" logo">
     </div>
 
   </footer>
