--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -42,40 +42,55 @@
     </nav>
   </nav>
 
-  <header> </header>
 
 
   <main>
 
-    <div class="productos">
-      <img src="../imagenes/mica.jpeg" width="400px" height="400px" alt="producto1">
-      <img src="../imagenes/mica2.jpeg" width="400px" height="400px" alt="producto2">
-      <img src="../imagenes/mica3.jpg" width="400px" height="400px" alt="producto3">
-      <img src="../imagenes/mica4.jpg" width="400px" height="400px" alt="producto4">
-      <img src="../imagenes/mica5.jpg" width="400px" height="400px" alt="producto5">
-      <img src="../imagenes/mica6.jpg" width="400px" height="400px" alt="producto6">
+
+  <div class="card-group">
+    <div class="card">
+      <img src="../imagenes/mica.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+
+      </div>
     </div>
+    <div class="card">
+      <img src="../imagenes/mica2.jpeg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+        <button type="button" class="btn btn-secondary">Secondary</button>
 
-
-
-  </main>
-
-
-
-
-
-  <footer>
-    <div class="instagram">
-        <p>Red social</p>
-        <a title="instagram" href="https://www.instagram.com/lasdoratis/?hl=es"><img src="../imagenes/instagram.png"
-            width="50px" alt="instagram"></a>
       </div>
-  
-      <div class="copy">
-        &copy 2023
+    </div>
+    <div class="card">
+      <img src="../imagenes/mica3.jpg" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+        <button type="button" class="btn btn-secondary">Secondary</button>
+
       </div>
-      
-  </footer>
+    </div>
+  </div>
+
+
+
+    <footer>
+      <div class="linea">
+        <p>Un concepto unico para tus prendas</p>
+
+      </div>
+
+      <div class="logo1">
+        <img src="./imagenes/iframe.jpg" alt=" logo">
+      </div>
+
+    </footer>
+
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
