--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -43,14 +43,9 @@
       </nav>
     </nav>
 
-
-
-
     <div class="catalogo-form">
-
       <a title="Catalogo" href="https://wa.me/c/5491140468911"><img src="../imagenes/giff.gif" width="400px"
           alt="gif carta"></a>
-
       <form class="form">
         <form action="#" method="post" enctype="text/plain">
           <input type="text" placeholder="Nombre">
@@ -59,26 +54,23 @@
           <input type="submit" value="Enviar">
         </form>
     </div>
+
     <div class="info">
       <p>Estamos para ayudarte con cualquier duda que tengas, estamos a tu disposicion, tanto por whatsapp como por
         instagram.</p>
     </div>
-
+<div class="instagram">
+      <a href="https://www.instagram.com/lasdoratis"> <img src="../imagenes/instagram.png" width="50px">
+    </div>
   </main>
 
 
 
 
   <footer>
-    <div class="linea">
-      <p>Un concepto unico para tus prendas</p>
-
-    </div>
-
     <div class="logo1">
       <img src="../imagenes/iframe.jpg" alt=" logo">
     </div>
-
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
