--- a/secciones/opiniones.html
+++ b/secciones/opiniones.html
@@ -46,9 +46,6 @@
       </nav>
     </nav>
 
-
-
-
     <div id="carouselExampleFade" class="carousel slide carousel-fade">
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -58,7 +55,7 @@
           <img src="../imagenes/2.jpg" class="d-block w-100" alt="Opiniones">
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="...">
+          <img src="../imagenes/novia.jpg" class="d-block w-100" alt="opiniones">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
@@ -74,15 +71,9 @@
 
 
   <footer>
-    <div class="linea">
-      <p>Un concepto unico para tus prendas</p>
-
-    </div>
-
     <div class="logo1">
       <img src="../imagenes/iframe.jpg" alt=" logo">
     </div>
-
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
