--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -13,83 +13,53 @@
 </head>
 
 <body>
-
-  <nav>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Las Doratis</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </nav>
-
-
-
   <main>
+    <nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Las Doratis</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </nav>
 
-
-  <div class="card-group">
-    <div class="card">
-      <img src="../imagenes/mica.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        <button type="button" class="btn btn-secondary">Secondary</button>
-
-      </div>
+    <div class="muestra">
+      <img src="../imagenes/mica.jpeg" width="300px" height="400" alt="producto">
+      <img src="../imagenes/mica2.jpeg" width="300px" height="400" alt="producto">
+      <img src="../imagenes/mica3.jpeg" width="300px" height="400" alt="producto">
+      <img src="../imagenes/mica4.jpeg" width="300px" height="400" alt="producto">
+      <img src="../imagenes/mica5.jpeg" width="300px" height="400" alt="producto">
+      <img src="../imagenes/mica6.jpeg" width="300px" height="400" alt="producto">
     </div>
-    <div class="card">
-      <img src="../imagenes/mica2.jpeg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-        <button type="button" class="btn btn-secondary">Secondary</button>
 
-      </div>
+  </main>
+
+
+  <footer>
+    <div class="logo1">
+      <img src="../imagenes/iframe.jpg" alt=" logo">
     </div>
-    <div class="card">
-      <img src="../imagenes/mica3.jpg" class="card-img-top" alt="...">
-      <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-        <button type="button" class="btn btn-secondary">Secondary</button>
+  </footer>
 
-      </div>
-    </div>
-  </div>
-
-
-
-    <footer>
-      <div class="linea">
-        <p>Un concepto unico para tus prendas</p>
-
-      </div>
-
-      <div class="logo1">
-        <img src="./imagenes/iframe.jpg" alt=" logo">
-      </div>
-
-    </footer>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
