--- a/index.html
+++ b/index.html
@@ -5,16 +5,18 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./scss/main.css">
+  <meta name="keywords" content="tejidos,indrumentaria, artesanal">
+  <meta name="description" content="presentacion basica de nuestro emprendimiento">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <title>lasdoratis</title>
+    <link rel="stylesheet" href="./scss/main.css">
+    <title>Las Doratis</title>
   <link rel="shortcut icon" href="./imagenes/iframe.jpg">
 </head>
 
 <body>
 
-  <main>
+ 
     <nav>
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
@@ -42,9 +44,25 @@
         </div>
       </nav>
     </nav>
+<header class="header">
+  <div>
+    <h1>Las Doratis</h1>
+    <h2>Tejidos Artesanales</h2>
+  </div>
+</header>
 
-    <div class="div-img">
-      <img src="./imagenes/Doratis.jpg" width="100%" alt="doratis tejidos">
+
+    <main>
+<div class="titulo">
+      <h2>Que tus prendas definan tu escencia. </h2></div>
+
+    <div class="muestra">
+      <img src="./imagenes/mica.jpeg" width="300px" height="400" alt="producto">
+      <img src="./imagenes/mica2.jpeg" width="300px" height="400" alt="producto">
+      <img src="./imagenes/mica3.jpeg" width="300px" height="400" alt="producto">
+      <img src="./imagenes/mica4.jpeg" width="300px" height="400" alt="producto">
+      <img src="./imagenes/mica5.jpeg" width="300px" height="400" alt="producto">
+      <img src="./imagenes/mica6.jpeg" width="300px" height="400" alt="producto">
     </div>
   </main>
 
