--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../scss/main.css">
+  <meta name="keywords" content="tejidos,artesanal, contacto, contactanos">
+  <meta name="description" content="como contactarnos por whatsappy por instagram">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <title>lasdoratis</title>
+  <link rel="stylesheet" href="../scss/main.css">
+  <title>Las Doratis Contactanos</title>
   <link rel="shortcut icon" href="../imagenes/iframe.jpg">
 </head>
 
@@ -59,7 +61,7 @@
       <p>Estamos para ayudarte con cualquier duda que tengas, estamos a tu disposicion, tanto por whatsapp como por
         instagram.</p>
     </div>
-<div class="instagram">
+    <div class="instagram">
       <a href="https://www.instagram.com/lasdoratis"> <img src="../imagenes/instagram.png" width="50px">
     </div>
   </main>
