--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -5,10 +5,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../scss/main.css">
+  <meta name="keywords" content="tejidos,indrumentaria, artesanal,productos,sweater,ruanas">
+  <meta name="description" content="muestra de algunos de nuestros productos">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  <title>lasdoratis</title>
+  <link rel="stylesheet" href="../scss/main.css">
+  <title>Las Doratis Productos</title>
   <link rel="shortcut icon" href="../imagenes/iframe.jpg">
 </head>
 
