--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -44,14 +44,20 @@
       </nav>
     </nav>
 
-    <div class="muestra">
-      <img src="../imagenes/mica.jpeg" width="300px" height="400" alt="producto">
-      <img src="../imagenes/mica2.jpeg" width="300px" height="400" alt="producto">
-      <img src="../imagenes/mica3.jpeg" width="300px" height="400" alt="producto">
-      <img src="../imagenes/mica4.jpeg" width="300px" height="400" alt="producto">
-      <img src="../imagenes/mica5.jpeg" width="300px" height="400" alt="producto">
-      <img src="../imagenes/mica6.jpeg" width="300px" height="400" alt="producto">
-    </div>
+  <div class="card">
+    <img src="../imagenes/mica.jpeg" width="300px"alt="mica">
+    <input type="button" value="comprar" >
+    <img src="../imagenes/mica2.jpeg" width="300px"alt="mica">
+    <input type="button" value="comprar" >
+    <img src="../imagenes/mica3.jpeg" width="300px"alt="mica">
+    <input type="button" value="comprar" >
+    <img src="../imagenes/mica4.jpeg" width="300px"alt="mica">
+    <input type="button" value="comprar" >
+    <img src="../imagenes/mica5.jpeg" width="300px"alt="mica">
+    <input type="button" value="comprar" >
+    <img src="../imagenes/mica6.jpeg" width="300px"alt="mica">
+    <input type="button" value="comprar" >
+  </div>
 
   </main>
 
