--- a/index.html
+++ b/index.html
@@ -9,52 +9,53 @@
   <meta name="description" content="presentacion basica de nuestro emprendimiento">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <link rel="stylesheet" href="./scss/main.css">
-    <title>Las Doratis</title>
+  <link rel="stylesheet" href="./scss/main.css">
+  <title>Las Doratis</title>
   <link rel="shortcut icon" href="./imagenes/iframe.jpg">
 </head>
 
 <body>
 
- 
-    <nav>
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="./index.html">Las Doratis</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="./secciones/productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./secciones/opiniones.html">Opiniones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./secciones/nosotros.html">Sobre Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./secciones/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+  <nav>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="./index.html">Las Doratis</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="./secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./secciones/opiniones.html">Opiniones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./secciones/nosotros.html">Sobre Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./secciones/contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
     </nav>
-<header class="header">
-  <div>
-    <h1>Las Doratis</h1>
-    <h2>Tejidos Artesanales</h2>
-  </div>
-</header>
+  </nav>
+
+  <header class="header">
+    <div>
+      <h1>Las Doratis</h1>
+      <h2>Tejidos Artesanales</h2>
+    </div>
+  </header>
 
 
-    <main>
-<div class="titulo">
-      <h2>Que tus prendas definan tu escencia. </h2></div>
+  <main>
+    <div class="titulo">
+      <h2>Que tus prendas definan tu escencia. </h2>
+    </div>
 
     <div class="muestra">
       <img src="./imagenes/mica.jpeg" width="300px" height="400" alt="producto">
