--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -14,9 +14,10 @@
   <link rel="shortcut icon" href="../imagenes/iframe.jpg">
 </head>
 
-<body>
+<body class="main2">
 
   <main>
+
 
     <nav>
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -58,15 +59,18 @@
         </form>
     </div>
 
-    <div class="info">
-      <p>Estamos para ayudarte con cualquier duda que tengas, estamos a tu disposicion, tanto por whatsapp como por
-        instagram.</p>
-    </div>
 
-    <div class="instagram">
-      <a href="https://www.instagram.com/lasdoratis"> <img src="../imagenes/instagram.png" width="50px">
-    </div>
+<div class="card-insta">
+    <div class="card">
+      <h5 class="card-header">Red Social</h5>
+      <div class="card-body">
+        <h5 class="card-title">Para mas Informacion</h5>
+        <p class="card-text">visita nuestro instagram</p>
+        <a href="https://www.instagram.com/lasdoratis" class="btn btn-primary"><img src="../imagenes/instagram.png" width="50px"></a>
+      </div>
+    </div></div>
 
+  
   </main>
 
 
