--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -15,35 +15,37 @@
 </head>
 
 <body>
-  <main>
-
-    <nav>
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Las Doratis</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
+  <header><nav>
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../index.html">Las Doratis</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+            </li>
+          </ul>
         </div>
-      </nav>
+      </div>
     </nav>
+  </nav></header>
+
+  <main>
+    <div class="h1-productos">
+<h1>Nuestros Productos</h1></div>
 
     <div class="card">
       <img src="../imagenes/mica.jpeg" width="300px" alt="mica">
@@ -59,7 +61,7 @@
       <img src="../imagenes/mica6.jpeg" width="300px" alt="mica">
       <input type="button" value="comprar">
     </div>
-
+ 
   </main>
 
 
