--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -16,37 +16,39 @@
 
 <body class="main2">
 
+<header><nav>
+  <nav class="navbar navbar-expand-lg navbar-light">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="../index.html">Las Doratis</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</nav></header>
+
+
   <main>
-
-
-    <nav>
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="../index.html">Las Doratis</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-    </nav>
-
+<div class="h1-contacto">
+  <h1>Contactanos</h1>
+</div>
     <div class="catalogo-form">
       <a title="Catalogo" href="https://wa.me/c/5491140468911"><img src="../imagenes/giff.gif" width="400px"
           alt="gif carta"></a>
