--- a/secciones/productos.html
+++ b/secciones/productos.html
@@ -15,53 +15,89 @@
 </head>
 
 <body>
-  <header><nav>
-    <nav class="navbar navbar-expand-lg navbar-light">
-      <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html">Las Doratis</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
-            </li>
-          </ul>
+  <header>
+    <nav>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="../index.html">Las Doratis</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="../secciones/productos.html">Productos</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/opiniones.html">Opiniones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/nosotros.html">Sobre Nosotros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../secciones/contacto.html">Contacto</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
+      </nav>
     </nav>
-  </nav></header>
+  </header>
 
   <main>
     <div class="h1-productos">
-<h1>Nuestros Productos</h1></div>
-
-    <div class="card">
-      <img src="../imagenes/mica.jpeg" width="300px" alt="mica">
-      <input type="button" value="comprar">
-      <img src="../imagenes/mica2.jpeg" width="300px" alt="mica">
-      <input type="button" value="comprar">
-      <img src="../imagenes/mica3.jpeg" width="300px" alt="mica">
-      <input type="button" value="comprar">
-      <img src="../imagenes/mica4.jpeg" width="300px" alt="mica">
-      <input type="button" value="comprar">
-      <img src="../imagenes/mica5.jpeg" width="300px" alt="mica">
-      <input type="button" value="comprar">
-      <img src="../imagenes/mica6.jpeg" width="300px" alt="mica">
-      <input type="button" value="comprar">
+      <h1>Nuestros Productos</h1>
     </div>
- 
+  
+
+    <div class="card-group">
+      <div class="card">
+        <img src="../imagenes/mica4.jpeg" class="card-img-top" alt="Poncho Alba">
+        <div class="card-body">
+          <h5 class="card-title">Poncho Alba</h5>
+          <input type="button" value="comprar">
+        </div>
+      </div>
+      <div class="card">
+        <img src="../imagenes/mica5.jpeg" class="card-img-top" alt="Sweater Suyay">
+        <div class="card-body">
+          <h5 class="card-title">Sweater Suyay</h5>
+          <input type="button" value="comprar">
+        </div>
+      </div>
+      <div class="card">
+        <img src="../imagenes/mica6.jpeg" class="card-img-top" alt="Sweater Iris">
+        <div class="card-body">
+          <h5 class="card-title">Sweater Iris</h5>
+          <input type="button" value="comprar">
+        </div>
+      </div>
+    </div>
+    <div class="card-group">
+      <div class="card">
+        <img src="../imagenes/mica.jpeg" class="card-img-top" alt="Sweater Atenea">
+        <div class="card-body">
+          <h5 class="card-title">Sweater Atenea</h5>
+          <input type="button" value="comprar">
+        </div>
+      </div>
+      <div class="card">
+        <img src="../imagenes/mica2.jpg" class="card-img-top" alt="Ruana Bufandón Grecia">
+        <div class="card-body">
+          <h5 class="card-title">Ruana Bufandón Grecia</h5>
+          <input type="button" value="comprar">
+        </div>
+      </div>
+      <div class="card">
+        <img src="../imagenes/mica3.jpg" class="card-img-top" alt="Sweater Suyay">
+        <div class="card-body">
+          <h5 class="card-title">Sweater Suyay</h5>
+          <input type="button" value="comprar">
+        </div>
+      </div>
+    </div>
+    
   </main>
 
 
